--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
 				<div class="right menu">
 					<div class="header item">
 						<!-- this redirects to about us page -->
-						<a href="#"><i class="info icon"></i> 我是谁</a> 
+						<a href="#"><i class="info icon"></i> About Me</a> 
 					</div>
 				</div>
 			</div>
