--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -121,10 +121,14 @@ ul.list {
 	border: solid #2c7bff 5px;
 }
 
+.footer {
+	margin-top: 3em;
+}
+
 #tradmark {
 	font-size: 1.3em;
 	font-weight: bold;
-	margin-top: 10px;
+	margin-top: 3em;
 	text-align: center;
 	padding-bottom: 5em;
 }
