--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,10 @@
 	
-	<hr class="abrupt">
-	<h2 id="tradmark">
-		<i class="phone icon"></i> Contact Us <br>
-		Fengrui Gan <i class="copyright outline icon"></i> 2020
-	</h2>
-
+	<div class="footer">
+		<hr class="abrupt">
+		<h2 id="tradmark">
+			<i class="phone icon"></i> Contact Us <br>
+			Fengrui Gan <i class="copyright outline icon"></i> 2020
+		</h2>
+	</div>
 	</body>
 </html>
