--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
             <% } %>
                     <div class="ui card" id=<%= work.id %>>
                         <div class="image">
-                            <img src="/<%= work.id %>/images/1.png">
+                            <img class="thumbnail" src="/<%= work.id %>/images/1.png">
                         </div>
                         <div class="content">
                             <div class="header">
@@ -83,7 +83,7 @@
             <% } %>
                     <div class="ui card" id=<%= work.id %>>
                         <div class="image">
-                            <img src="/<%= work.id %>/images/1.png">
+                            <img class="thumbnail" src="/<%= work.id %>/images/1.png">
                         </div>
                         <div class="content">
                             <div class="header">
