--- a/views/home.ejs
+++ b/views/home.ejs
@@ -170,7 +170,7 @@
                                 <img src="images/marine_vs_zergling_thumbnail.png">
                             </div>
                         </div>
-                        <ul class="list">
+                        <ul id="list">
                             <!-- <li class="active">
                                 <img src="images/CGJ_theme.png">
                             </li>
@@ -187,7 +187,6 @@
     </div>
 
 </div>
-
 
 <script src="/scripts/home.js"></script>
 
