--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <!-- <script src="https://kit.fontawesome.com/aa892a9d47.js" crossorigin="anonymous"></script> -->
 	</head>
-	<body>
+	<body onload="onLoad()">
 		
 		<div class="ui fixed inverted violet menu">
 			<div class="ui container">
