--- a/views/home.ejs
+++ b/views/home.ejs
@@ -174,14 +174,14 @@
 
 </div>
 
-<script>
+<!-- <script>
     function onLoad() {
         let thumbs = document.querySelectorAll('.thumbnail');
         thumbs.forEach( (thumb) => {
             thumb.style.height = String(thumb.width * 9 / 16) + "px"
         })
     }
-</script>
-<script src="/scripts/home.js"></script>
+</script> -->
+<script src="/scripts/test.js"></script>
 
 <%- include('./partials/footer') %>
