--- a/views/partials/work-header.ejs
+++ b/views/partials/work-header.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<title><%= work.title %>|独立游戏展</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" href="/stylesheets/main.css">
+		<link rel="stylesheet" href="/stylesheets/work.css">
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <!-- <script src="https://kit.fontawesome.com/aa892a9d47.js" crossorigin="anonymous"></script> -->
@@ -23,7 +23,7 @@
 				<div class="right menu">
 					<div class="header item">
 						<!-- this redirects to about us page -->
-						<a href="#"><i class="info icon"></i> About Me</a> 
+						<a href="/about"><i class="info icon"></i> About Indie Gallery</a> 
 					</div>
 				</div>
 			</div>
