--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,12 +10,16 @@
 </div>
 
 <div class="main ui container">
+    <h3>
+        联系我欢迎加QQ： 369447149
+    </h3>
+
     <h2>
         <i class="question circle blue icon"></i> 这是个什么地方呀？
     </h2>
     <hr class="smooth">
     <p>
-        我是2020 CiGA Game Jam的参赛选手之一，我们团队的作品是“裂变 （fission）”，也就是目前网站上唯一一个游戏（没有内容的那个当然不算呀！）。
+        我是2020 CiGA Game Jam的参赛选手之一，我们团队的作品是“裂变 （fission）”。
     </p>
     <p>
         我是个转码的程序菜鸡，这次比赛是我原本希望在我的简历上能有些东西写，比完就算了。但是比赛结束之后，看到我的朋友说我们的游戏 <strong>“挺好玩的耶”</strong> 的时候真的让我觉得很开心。在得知官方（好像）不会保留比赛作品的时候，我不希望让这次经历就这样被忘掉，所以我想把它记录下来。
