--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@
                 <div class="ui raised link cards four column">
             <% } %>
                 <% if (work.authors.length === 0) {work.authors = "作者没有留下名字"} %>
-                    <div class="ui card" id=<%= work.id %> data-title=<%= work.title %> data-authors=<%= work.authors %> data-imgCount=<%= work.imgCount %> data-description="<%= work.description %>" >
+                    <div class="ui card" id=<%= work.id %> data-title=<%= work.title %> data-authors="<%= work.authors %>" data-imgCount=<%= work.imgCount %> data-description="<%= work.description %>" >
                         <div class="image">
                             <img class="thumbnail" src="/<%= work.id %>/images/1.png">
                         </div>
@@ -125,8 +125,8 @@
                     </div>
                     <div class='ten wide column'>
                         <div class="row">
-                            <div class="ui image showcase">
-                                <img src="images/marine_vs_zergling_thumbnail.png">
+                            <div class="ui fluid image">
+                                <img src="images/marine_vs_zergling_thumbnail.png" id="showcase">
                             </div>
                         </div>
                         <ul id="list">
