--- a/views/home.ejs
+++ b/views/home.ejs
@@ -125,8 +125,8 @@
                     </div>
                     <div class='ten wide column'>
                         <div class="row">
-                            <div class="ui fluid image">
-                                <img src="images/marine_vs_zergling_thumbnail.png" id="showcase">
+                            <div class="ui fluid image showcase">
+                                <img src="images/marine_vs_zergling_thumbnail.png">
                             </div>
                         </div>
                         <ul id="list">
