--- a/public/stylesheets/work.css
+++ b/public/stylesheets/work.css
@@ -98,27 +98,10 @@ i.icon {
 }
  */
 
-.description {
-	overflow: hidden;
-	display: -webkit-box;
-	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
-}
-
-#description {
-	overflow: hidden;
-	display: -webkit-box;
-	-webkit-line-clamp: 7;
-	-webkit-box-orient: vertical;
-}
-
-
-.ui.hide {
-	display: none;
-}
 
 #list {
-	padding: 0;
+    padding: 0;
+    margin: 0;
 	list-style: none;
 	/* margin-block-end: 0; */
 }
