sanitize scrtip tag in textarea

--- a/views/works/create.ejs
+++ b/views/works/create.ejs
@@ -19,7 +19,7 @@
     <form action="/works" enctype="multipart/form-data" method="POST" class="ui form">
         <div class="field">
             <label for="title">游戏标题</label>
-            <input type="text" name="title" placeholder="写下响亮的名字吧~">
+            <input type="text" name="title" required placeholder="写下响亮的名字吧~">
         </div>
         <div class="ui divider"></div>
         <div class="author">
