add edit and delete page

--- a/public/stylesheets/work.css
+++ b/public/stylesheets/work.css
@@ -98,6 +98,9 @@ i.icon {
 }
  */
 
+.hide {
+	 display: none;
+ }
 
 #list {
     padding: 0;
@@ -123,7 +126,7 @@ i.icon {
 }
 
 .ui.button.function {
-    background: linear-gradient(315deg, rgb(38, 255, 206) 0%, rgb(66, 154, 255) 100%);
+    background: linear-gradient(315deg, rgb(43, 255, 237) 0%, rgb(66, 154, 255) 100%);
     color: white;
     font-weight: lighter
 }
