--- a/views/works/show.ejs
+++ b/views/works/show.ejs
@@ -106,6 +106,9 @@
     <% } %>
 
     <a href="/" class="ui blue button">返回</a>
+    <a href="/works/:id/edit" class="ui orange button">编辑作品</a>
+    <a href="/works/<%= work.id %>/delete" class="ui red button">删除作品</a>
+
 </div>
 
 <script src="/scripts/work.js"></script>
