host images on fast.io

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,7 +85,7 @@
                     <% }) %>
                     <div class="ui card" id=<%= work.id %> data-title=<%= work.title %> data-authors="<%= auth %>" data-imgCount=<%= work.imgCount %> data-description="<%= work.description %>" >
                         <div class="image">
-                            <img class="thumbnail" src="/<%= work.id %>/images/1.png">
+                            <img class="thumbnail" src="https://indie-gallery-app.imfast.io/<%= work.id %>/images/1.png">
                         </div>
                         <div class="content">
                             <div class="header">
