--- a/views/works/show.ejs
+++ b/views/works/show.ejs
@@ -38,7 +38,7 @@
 				<div class="two wide column"></div>
 				<div class="twelve wide column">
 						<div class="ui fluid image">
-							<img src="/<%= work.id %>/images/1.png" id="showcase">
+							<img src="#" id="showcase">
 						</div>
 				</div>
 				<div class="two wide column"></div>
