--- a/views/works/show.ejs
+++ b/views/works/show.ejs
@@ -111,5 +111,5 @@
 
 </div>
 
-<script src="/scripts/work.js"></script>
+<script src="/scripts/show.js"></script>
 <%- include('../partials/footer') %>
