--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,7 +85,11 @@
                     <% }) %>
                     <div class="ui card" id=<%= work.id %> data-title=<%= work.title %> data-authors="<%= auth %>" data-imgCount=<%= work.imgCount %> data-description="<%= work.description %>" >
                         <div class="image">
-                            <img class="thumbnail" src="https://indie-gallery-app.imfast.io/<%= work.id %>/images/1.png">
+                            <% if (work.imgCount !== 0) { %>
+                                <img class="thumbnail" src="https://indie-gallery-app.imfast.io/<%= work.id %>/images/1.png">
+                            <% } else { %>
+                                <img class="thumbnail" src="/images/placeholder.png">
+                            <% } %>
                         </div>
                         <div class="content">
                             <div class="header">
@@ -130,7 +134,7 @@
                     <div class='ten wide column'>
                         <div class="row">
                             <div class="ui fluid image">
-                                <img src="images/marine_vs_zergling_thumbnail.png" id="showcase">
+                                <img src="/images/marine_vs_zergling_thumbnail.png" id="showcase">
                             </div>
                         </div>
                         <ul id="list">
