--- a/views/works/create.ejs
+++ b/views/works/create.ejs
@@ -108,7 +108,7 @@
 
         <div class="field">
             <label for="password">请输入一个用于管理这个作品的密码（这个密码会在以后用于修改作品内容，可与队员分享，但注意保密）</label>
-            <input type="password" name="password" maxlength="40" placeholder="密码（最多40位）">
+            <input type="password" name="password" maxlength="40" placeholder="密码（最多40位）" required>
         </div>
         <input class="ui button green" type="submit" value="上传游戏">
     </form>
