--- a/views/works/delete.ejs
+++ b/views/works/delete.ejs
@@ -20,7 +20,7 @@
     </h3>
     <form action="/works/<%= work.id %>?_method=delete" method="post" class="ui form">
         <div class="field">
-            <input type="text" name="password" placeholder="管理密码">
+            <input type="password" name="password" placeholder="管理密码" required>
         </div>
         <input type="submit" class="ui red button delete" value="删除">
         <a href="/works/<%= work.id %>" class="ui blue button">返回</a>
@@ -34,26 +34,7 @@
             </div>
 
         </div>
-
     </form>
-
-
-    <div class="error hide">
-        <h3>
-            <i class="close red icon"></i> 密码错误
-        </h3>
-    </div>
-
-    <div class="confirm hide">
-        <h3>
-            请问您确定要删除这个作品吗？
-        </h3>
-        <div  style="display: flex; justify-content: center;">  
-            <input type="submit" class="ui red button" value="确定删除">
-            <a href="/works/<%= work.id %>/" class="ui blue button ">返回</a>
-        </div>
-    </div>
-
 </div>
 
 
