--- a/views/works/create.ejs
+++ b/views/works/create.ejs
@@ -111,6 +111,7 @@
             <input type="password" name="password" maxlength="40" placeholder="密码（最多40位）" required>
         </div>
         <input class="ui button green" type="submit" value="上传游戏">
+        <a href="/" class="ui blue button">返回</a>
     </form>
 
 </div>
